k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sidmonitor
  labels:
    app.kubernetes.io/part-of: sidmonitor
